# LCS-Solver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  bm_llcs.cc  bm_llcs_mc.cc  bm_rmq.cc  bm_segtree.cc
cmake/: CopyRuntimeDeps.cmake  DownloadAndUnzip.cmake  LibVersion.h.in  lcs_solverConfig.cmake.in
demo/: CMakeLists.txt
demo/TestInstall/: CMakeLists.txt  main.cc
demo/dev/: CMakeLists.txt  main.cc
demo/diffgc/: CMakeLists.txt  FileAdapter.cc  FileAdapter.h  README.md  diffgc.cc  diffgc.h  main.cc
demo/diffgc/res/: config_mc.json  file1.cc
demo/dna/: CMakeLists.txt  OutputParser.cc  OutputParser.h  README.md  dna.cc  dna.h  main.cc
demo/solver/: CMakeLists.txt  README.md  main.cc  solver.cc  solver.h
docs/: CMakeLists.txt  Doxyfile  Test_Results.htm
docs/LLCS_Bench/: LLCS_Results-Fine.ipynb  LLCS_Results.ipynb  results.json  results2.json  results3.json  results_fine.json
docs/RMQ_Bench/: RMQ_Figures.ipynb  RMQ_Results2.json
include/lcs_solver/algorithms/: AlgoCategory.h  AlgoFactory.h  AlgoType.h  BaseAlgorithm.h  BaseSolution.h
include/lcs_solver/algorithms/LCS/: LCS2_RT.h  LCS2_STD_H.h  LCS2_STD_S.h  LCS_STD_2_DAG.hpp  LCS_STD_S.h  OutputType.h  Reconstructor_RT.h  Reconstructor_RT.tpp  Reconstructor_S.h  Reconstructor_S.tpp
include/lcs_solver/algorithms/LLCS/: LLCS2_Algorithm.h  LLCS2_MC.h  LLCS2_MC_1C.h  LLCS2_MC_Algorithm.h  LLCS2_MC_INC.h  LLCS2_MC_INC_E.h  LLCS2_MC_O1_SYNC.h  LLCS2_SA_MQ.h  LLCS2_SA_RMQ.h  LLCS2_SIG_Algorithm.h  LLCS2_SL_R.h  LLCS2_SR_MQ.h  LLCS2_SR_RMQ.h  LLCS2_STD_FL.h  LLCS2_STD_H.h  LLCS_Algorithm.h  LLCS_STD_FL.h
include/lcs_solver/algorithms/solutions/: AnyIterator.h  BaseCollector.h  BaseIterator.h  EmptySolution.h  Points.h  StringSolution.h  UnsignedSolution.h  Vector3DSolution.h
include/lcs_solver/constraints/: BaseConstraint.h  ConstraintCategory.h  ConstraintFactory.h  ConstraintMap.h  ConstraintType.h
include/lcs_solver/constraints/global/: Constraint_BR.h  Constraint_LLCS_Known.h
include/lcs_solver/constraints/input/: Constraint_Const_Sigma.h  Constraint_LCS_2.h  Constraint_LCS_K.h
include/lcs_solver/constraints/local/: Constraint_MC.h  Constraint_MC_1C.h  Constraint_MC_INC.h  Constraint_MC_O1C.h  Constraint_MC_O1C_SYNC.h  Constraint_Sigma.h  Constraint_Sigma_L.h  Constraint_Sigma_R.h
include/lcs_solver/problems/: BaseProblem.h  LCS_Classic.h  ProblemFactory.h  ProblemType.h
include/lcs_solver/problems/AdamsonEtAl/: LCS2_BR.h  LCS2_MC.h  LCS2_MC_1C.h  LCS2_MC_INC.h  LCS2_MC_O1C.h  LCS2_MC_O1C_SYNC.h  LCS2_SIGMA.h  LCS2_SIGMA_L.h  LCS2_SIGMA_R.h
include/lcs_solver/structures/: Embedding.h  Matrix.h  MatrixConstIter.h  MatrixIter.h  MaxDequeCR.h  MaxQueueN.h  MaxSegTreeND.h  RangeTree2D.h  RangeTree2D.tpp  SegmentTree.h  SimpleDAG.h
include/lcs_solver/util/: AlgoTestParam.h  Cantor.h  CommonTypes.h  InOutHelper.h  InputParser.h  Logger.hpp  MetaTableCalc.h  ParamGenerator.h  RMQ.h  RadixSort.h  RndUtility.h  StrPtrVector.h  StringMaker.h  UnicodeRange.h
lib/: CMakeLists.txt
lib/algorithms/: AlgoFactory.cc  BaseAlgorithm.cc  BaseSolution.cc  CMakeLists.txt
lib/algorithms/LCS/: CMakeLists.txt  LCS2_RT.cc  LCS2_STD_H.cc  LCS2_STD_S.cc  LCS_STD_DAG.cpp  LCS_STD_S.cc
lib/algorithms/LLCS/: CMakeLists.txt  LLCS2_Algorithm.cc  LLCS2_MC.cc  LLCS2_MC_1C.cc  LLCS2_MC_Algorithm.cc  LLCS2_MC_INC.cc  LLCS2_MC_INC_E.cc  LLCS2_MC_O1_SYNC.cc  LLCS2_SA_MQ.cc  LLCS2_SA_RMQ.cc  LLCS2_SIG_Algorithm.cc  LLCS2_SR_MQ.cc  LLCS2_SR_RMQ.cc  LLCS2_STD_FL.cc  LLCS2_STD_H.cc  LLCS_Algorithm.cc  LLCS_STD_FL.cc
lib/algorithms/solutions/: BaseCollector.cc  BaseIterator.cc  CMakeLists.txt  EmptySolution.cc  Points.cc  StringSolution.cc  UnsignedSolution.cc  Vector3DSolution.cc
lib/constraints/: BaseConstraint.cc  CMakeLists.txt  ConstraintFactory.cc  ConstraintMap.cc  ConstraintType.cc
lib/constraints/global/: CMakeLists.txt  Constraint_BR.cc  Constraint_LLCS_Known.cc
lib/constraints/input/: CMakeLists.txt  Constraint_Const_Sigma.cc  Constraint_LCS_2.cc  Constraint_LCS_K.cc
lib/constraints/local/: CMakeLists.txt  Constraint_MC.cc  Constraint_MC_1C.cc  Constraint_MC_INC.cc  Constraint_MC_O1C.cc  Constraint_MC_O1C_SYNC.cc  Constraint_Sigma.cc  Constraint_Sigma_L.cc  Constraint_Sigma_R.cc
lib/problems/: BaseProblem.cpp  CMakeLists.txt  LCS_Classic.cpp  ProblemFactory.cc
lib/problems/AdamsonEtAl/: CMakeLists.txt  LCS2_BR.cc  LCS2_MC.cc  LCS2_MC_1C.cc  LCS2_MC_INC.cc  LCS2_MC_O1C.cc  LCS2_MC_O1C_SYNC.cc  LCS2_SIGMA.cc  LCS2_SIGMA_L.cc  LCS2_SIGMA_R.cc
lib/structures/: CMakeLists.txt  Embedding.cc  Matrix.cc  MatrixConstIter.cc  MatrixIter.cc  MaxDequeCR.cc  MaxSegTreeND.cc  SegmentTree.cc  SimpleDAG.cc
lib/util/: AlgoTestParam.cc  CMakeLists.txt  CommonTypes.cc  InOutHelper.cc  InputParser.cc  Logger.cc  ParamGenerator.cc  RMQ.cc  RndUtility.cc  StrPtrVector.cc  StringMaker.cc  UnicodeRange.cc
tests/: CMakeLists.txt
tests/LCS/: CMakeLists.txt  test_LCS2_MC_Match.cc  test_LCS2_Match.cc  test_LCS2_RT.cc  test_Vec3DSol.cc
tests/LLCS/: CMakeLists.txt  hardCoded_LLCS.cc  hardCoded_LLCS.h  test_MC.cc  test_MC_1C.cc  test_MC_INC.cc  test_MC_INC_Match.cc  test_MC_O1_SYNC.cc  test_SA_MQ.cc  test_SA_Match.cc  test_SA_RMQ.cc  test_SL.cc  test_SR_MQ.cc  test_SR_Match.cc  test_SR_RMQ.cc  test_STD_FL.cc  test_STD_Match.cc
tests/integration/: CMakeLists.txt  test_diffgc.cc  test_dna.cc  test_json.cc  test_solver.cc
tests/integration/res/: CMakeLists.txt  file2.cc  gap.json  mc_constraint.json  test.fasta
tests/structures/: CMakeLists.txt  test_Matrix.cc  test_MatrixConstIter.cc  test_MatrixIter.cc  test_MaxSegTreeND.cc  test_RangeTree2D.cc  test_SegmentTree.cc
tests/util/: CMakeLists.txt  cantor_test.cc  metaTableCalc_test.cc  radixSort_test.cc  rmq_test.cc
